# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.364 2007-03-08 19:35:29 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS HEAD (????/??/??)
 - (2007/03/07) Added Intro support for .opm format to add intros for packages.
    For example to add infos where the module can be found, if you need to add
    some groups to access the module or some other useful stuff.
    Intro(Install|Reinstall|Upgrade|Uninstall)(Pre|Post) can be used. For more
    infos see the developer manual in section "Package Spec File".
 - (2007/03/07) Fixed bug# 1398 - Malformed UTF-8 charaters in Admin Backend -
    System Log.
 - (2007/03/05) Added Type, Service, SLA as ticket default attribute.
    Each an be activated by a config setting over SysConfig under
    Ticket :: Core :: Ticket.
 - (2007/02/15) Improved PGP decryption of files if more the one possible
    private key exists in the system and one of it is invalid (e. g. no
    configured password).
 - (2007/02/15) Fixed bug-ticket# 2007020542000593 - Queue refresh "off"
    can't be used on oracle database.
 - (2007/02/15) Add BuildSelection(). This function replaced OptionStrgHashRef(),
    OptionElement() AgentQueueListOption().
 - (2007/02/12) Added pending time selection feature for generic agent.
 - (2007/02/07) Moved to dtl block in customer ticket zoom view.
 - (2007/02/07) Moved default WebMaxFileUpload config option from 5 MB
    to 10 MB.
 - (2007/01/31) Fixed Free Field output in AgentTicketForward and
    AgentTicketPhoneOutbound.
 - (2007/01/30) Added 4 ticket freetime fields and improved freetime function.
 - (2007/01/30) Relocated valid functionality to new Valid.pm to move it
   out from Kernel/System/DB.pm.
 - (2007/01/18) Added X-OTRS-Lock and X-OTRS-FollowUp-Lock header for